2003-03-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/usertracking.py: More comments (this
	time about Apache 2 and its cookie log format).

	* pylibs/Date/Locales.py: to suppress a DeprecationWarning
	in Python 2.3a2, added a magic "coding" indicator, as this
	file contains some non-ASCII characters.

	* pylibs/DT/DTLexer.py (findTags): now permit colons
	inside tags when not followed by a '>'.

2003-03-12  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/usertracking.py: added some comments about 
	apache configuration (for cookie logging).

2003-03-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/usertracking.py: added default cookie name.

	* SkunkWeb/configure.in, configure: added usertracking to list
	of services.

	* SkunkWeb/Services/web/protocol.py: removed the CVS Log
	information at the end of the file.

	* SkunkWeb/Services/usertracking.py: a service for cookie-based
	user tracking.

2003-03-06  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/hooks.py: fix for Python 2.1 compatibility.

2003-03-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/validates.py: made the error messages of the validating
	fields (except the address field) customizable.

2003-03-04 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/validates.py (ISBNField): added a field
	for inputting ISBNs.

2003-03-03 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/views.py (ViewableForm.getView): now set 
	the name attribute of the form.

2003-02-27  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (LocalFS.__init__): make LocalFS follow
	symlinks by default.
	
2003-02-25 Jacob Smullyan <smulloni@smullyan.org>

	* docs/opman/opman.tex (section{Software}): added mention of the
	mxBase extension package to prerequisites.

2003-02-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: explicitly included
	sys/syslog.h, since with Apache 1.3.27 on Darwin that header